# DarkBot.Net

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  DarkBot.Net.slnx  Directory.Build.props  MIGRATION_LOG.md  PARITY_STATUS.md  README.md
.cursor/: settings.json
DarkOrbit_Version1.1.102/: login_trace_20260623_231308.jsonl  login_trace_20260624_152733.jsonl  login_trace_20260624_152733.webdata.json  login_trace_20260624_152849.jsonl  login_trace_20260624_152917.jsonl  login_trace_20260624_153006.jsonl  login_trace_20260624_153006.webdata.json  login_trace_20260624_153111.jsonl  login_trace_20260624_153111.webdata.json  login_trace_20260624_165417.jsonl  login_trace_20260624_165504.jsonl  login_trace_20260624_165504.webdata.json  login_trace_20260624_165612.jsonl  login_trace_20260624_165612.webdata.json  login_trace_20260624_170829.jsonl  login_trace_20260624_170829.webdata.json  run_antidebug_probe.ps1  run_unity_bridge_test.ps1  run_unity_click_compare.ps1  run_unity_move_test.ps1  run_unity_probe.ps1  unity_antidebug_probe.js  unity_autologin_run.py  unity_bridge_agent.js  unity_bridge_test.py  unity_enter_map.js  (+6 more)
src/DarkBot.Net.Agent.Bridge/: CMakeLists.txt  build-bridge.ps1
src/DarkBot.Net.Agent.Bridge/include/: DarkBotBridge.h
src/DarkBot.Net.Agent.Bridge/java/eu/darkbot/bridge/: KekkaAuthBootstrap.java  KekkaBootstrap.java  KekkaGameApiLauncher.java  KekkaLaunchConfig.java  KekkaMinimalLauncher.java  KekkaPlayerLauncher.java
src/DarkBot.Net.Agent.Bridge/src/: JniHost.cpp  JniHost.h  JniInvoke.cpp  JniInvoke.h  KekkaShim.cpp  MemoryBridge.cpp
(+811 files in other folders)
